--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ target_link_libraries(gengine ${Boost_LIBRARIES})
 target_link_libraries(gengine ${SFML_SYSTEM_LIBRARY_RELEASE} ${SFML_GRAPHICS_LIBRARY_RELEASE} ${SFML_WINDOW_LIBRARY_RELEASE} ${SFML_AUDIO_LIBRARY_RELEASE})
 target_link_libraries(gengine ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(gengine ${SQLITE3_LIBRARIES})
-target_link_libraries(gengine ${CEGUI_LIBRARIES})
+target_link_libraries(gengine ${CEGUI_LIBRARIES} ${CEGUI_RENDERER_COMPONENTS})
 
 install(TARGETS gengine
   ARCHIVE DESTINATION lib COMPONENT Development
