--- a/src/graphic/2d/CMakeLists.txt
+++ b/src/graphic/2d/CMakeLists.txt
@@ -1,10 +1,10 @@
 list(APPEND GEngine_SOURCES
-  "${PROJECT_CURRENT_SOURCE_DIR}/2d.cpp"
-  "${PROJECT_CURRENT_SOURCE_DIR}/image_manipulation.cpp"
-  "${PROJECT_CURRENT_SOURCE_DIR}/sprite.cpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/2d.cpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/image_manipulations.cpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/sprite.cpp"
 )
 list(APPEND GEngine_HEADERS
-  "${PROJECT_CURRENT_SOURCE_DIR}/2d.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/2d.hpp"
 )
 
 set(GEngine_SOURCES ${GEngine_SOURCES} PARENT_SCOPE)
