Fix header installation properly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,10 +66,9 @@ install(TARGETS gengine
   LIBRARY DESTINATION lib COMPONENT Runtime
 )
 
-file(GLOB_RECURSE gengine_HEADER_FILES RELATIVE ${PROJECT_SOURCE_DIR}/src src/*.hpp)
-list(REMOVE_ITEM gengine_HEADER_FILES src/internal_header.hpp)
-foreach(HEADER ${gengine_HEADER_FILES})
+list(REMOVE_ITEM GEngine_HEADERS src/internal_header.hpp)
+foreach(HEADER ${GEngine_HEADERS})
   get_filename_component(HEADER_DIR "${HEADER}" PATH) # Ugly hack because CMake can't currently install headers while preserving directory structure <I think>
-  install(FILES src/${HEADER} DESTINATION include/GEngine/${HEADER_DIR})
-endforeach(HEADER gengine_HEADER_FILES)
+  install(FILES ${HEADER} DESTINATION include/GEngine/${HEADER_DIR})
+endforeach(HEADER GEngine_HEADERS)
 install(FILES ${PROJECT_BINARY_DIR}/src/build_config.hpp DESTINATION include/GEngine/)
