--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ install(TARGETS gengine
 
 foreach(HEADER ${GEngine_HEADERS})
   if (NOT ${HEADER} MATCHES "internal_header.hpp")
-    string(REPLACE "${PROJECT_SOURCE_DIR}/" "" HEADER ${HEADER})
+    string(REPLACE "${PROJECT_SOURCE_DIR}/src/" "" HEADER ${HEADER})
     get_filename_component(HEADER_DIR "${HEADER}" PATH) # Ugly hack because CMake can't currently install headers while preserving directory structure <I think>
     get_filename_component(HEADER_NAME "${HEADER}" NAME)
     install(FILES "${HEADER}" DESTINATION "include/GEngine/${HEADER_DIR}")
