Fix headers MkII

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ foreach(HEADER ${GEngine_HEADERS})
     string(REPLACE "${PROJECT_SOURCE_DIR}/src/" "" HEADER ${HEADER})
     get_filename_component(HEADER_DIR "${HEADER}" PATH) # Ugly hack because CMake can't currently install headers while preserving directory structure <I think>
     get_filename_component(HEADER_NAME "${HEADER}" NAME)
-    install(FILES "${HEADER}" DESTINATION "include/GEngine/${HEADER_DIR}")
+    install(FILES "src/${HEADER}" DESTINATION "include/GEngine/${HEADER_DIR}")
   endif(NOT ${HEADER} MATCHES "internal_header.hpp")
 endforeach(HEADER GEngine_HEADERS)
 install(FILES ${PROJECT_BINARY_DIR}/src/build_config.hpp DESTINATION include/GEngine/)
