Added a SFML -> CEGUI keymap and added it to the input inject code.

--- a/src/interface/CMakeLists.txt
+++ b/src/interface/CMakeLists.txt
@@ -1,6 +1,9 @@
 list(APPEND GEngine_SOURCES
   "${CMAKE_CURRENT_SOURCE_DIR}/interface.cpp"
 )
+list(APPEND GEngine_SOURCES
+  "${CMAKE_CURRENT_SOURCE_DIR}/keymap.cpp"
+)
 list(APPEND GEngine_HEADERS
   "${CMAKE_CURRENT_SOURCE_DIR}/interface.hpp"
 )
