Created a misc module.  * Moved rand into it.  * Started working on a time submodule for the misc module.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,8 +6,8 @@ add_subdirectory(file)
 add_subdirectory(graphic)
 add_subdirectory(interface)
 add_subdirectory(math)
+add_subdirectory(misc)
 add_subdirectory(net)
-add_subdirectory(rand)
 add_subdirectory(sound)
 add_subdirectory(string)
 add_subdirectory(thread)
