--- a/src/misc/CMakeLists.txt
+++ b/src/misc/CMakeLists.txt
@@ -1,10 +1,11 @@
 list(APPEND GEngine_SOURCES
-  "${CMAKE_CURRENT_SOURCE_DIR}/rand.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/rand.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/time.cpp"
 )
 list(APPEND GEngine_HEADERS
-  "${CMAKE_CURRENT_SOURCE_DIR}/rand.hpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/rand.hpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/time.hpp"
 )
 
 set(GEngine_SOURCES ${GEngine_SOURCES} PARENT_SCOPE)
 set(GEngine_HEADERS ${GEngine_HEADERS} PARENT_SCOPE)
-
